fixed blog post page alignment

--- a/src/components/blogPostPage/blogPostPage.css
+++ b/src/components/blogPostPage/blogPostPage.css
@@ -18,8 +18,8 @@
   width: 80%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: flex-start;
+  align-items: center;
   margin-top: 80vh;
   margin-top: 80svh;
   margin-bottom: 10vh;
@@ -27,22 +27,28 @@
 
 .blogPostTitle {
   text-align: center;
-  width: 100%;
-  height: 5%;
-  margin-bottom: 80px;
+  width: 80%;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
   font-family: "Cormorant", serif;
-  font-size: calc(35px + 10 * ((100vw - 320px) / 680));
+  font-size: calc(28px + 11 * ((100vw - 320px) / 680));
 }
 
 .blogPostBodyCopy {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   width: 80%;
   text-align: left;
   overflow: scroll;
   font-family: "Cormorant", serif;
   font-size: calc(20px + 3 * ((100vw - 320px) / 680));
+}
+
+h1{
+    margin: 0px;
 }
 
 /* h1{
