--- a/src/components/blogPostTiles/blogPostTiles.css
+++ b/src/components/blogPostTiles/blogPostTiles.css
@@ -115,7 +115,7 @@
 }
 
 .tileSubheader{
-  margin: 3px;
+  margin: 10px;
 }
 
 .tileContainer:hover{
